Improve translate functions

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -6,33 +6,33 @@
     "A fresh verification link has been sent to your email address.": "새로운 인증 링크를 이메일로 보냈습니다.",
     "A new verification link has been sent to the email address you provided during registration.": "새로운 확인 링크를 가입할 때 사용한 이메일 주소로 보냈습니다.",
     "A new verification link has been sent to your email address.": "새 확인 링크가 이메일 주소로 전송되었습니다.",
-    "A Timeout Occurred": "시간 초과가 발생했습니다.",
-    "Accept": "수용하다",
+    "A Timeout Occurred": "시간 초과가 발생됨",
+    "Accept": "수락하기",
     "Accepted": "수락됨",
     "Action": "액션",
     "Action Name": "액션 이름",
     "Actions": "액션들",
     "Active": "활성화",
     "Add": "추가",
-    "Add :name": ":name을 더하다",
+    "Add :name": ":name 추가하기",
     "Additional Information": "추가 정보",
     "Additional Option": "추가옵션",
     "Additional Option Price": "추가옵션가격",
     "Address": "주소",
     "Admin": "관리자",
     "After Quantity": "변경 후 수량",
-    "Agree": "동의하다",
+    "Agree": "동의하기",
     "Alert Email": "알람 이메일",
     "Alert Emails": "알람 이메일",
     "All rights reserved.": "모든 권리 보유.",
     "Already registered?": "계정이 있으신가요?",
     "Already Reported": "이미 보고됨",
     "Amount": "수량",
-    "Archive": "보관소",
+    "Archive": "보관하기",
     "Are you sure you want to delete # %s?": "# %s번을 정말 삭제하시겠습니까?",
     "Are you sure you want to delete your account?": "계정을 삭제하시겠습니까?",
-    "Assign": "양수인",
-    "Associate": "연관짓다",
+    "Assign": "할당하기",
+    "Associate": "연결하기",
     "Attach": "첨부",
     "Attachment": "첨부파일",
     "Attachment Name": "첨부파일 이름",
@@ -76,7 +76,7 @@
     "Brand": "브랜드",
     "Brand Name": "브랜드이름",
     "BrandCd": "브랜드코드",
-    "Browse": "검색",
+    "Browse": "검색하기",
     "Bundled Goods": "묶음 상품",
     "Business Management": "거래처 관리",
     "Buyer": "구매자",
@@ -98,21 +98,21 @@
     "Change Status": "상태 바꾸기",
     "Change Status Action - :status": "[:status] 로 상태변경",
     "Choose": "선택",
-    "Choose :name": ":name개를 선택하세요",
+    "Choose :name": ":name 선택하기",
     "Choose File": "파일 선택",
     "Choose Image": "이미지 선택",
     "Classification": "분류",
     "Click here to re-send the verification email.": "확인 이메일을 다시 보내려면 여기를 클릭하십시오.",
     "click here to request another": "다른 항목을 요청하려면 여기를 클릭하십시오.",
-    "Click to copy": "복사하려면 클릭하세요.",
-    "Client Closed Request": "클라이언트 종료 요청",
+    "Click to copy": "클릭하여 복사하기",
+    "Client Closed Request": "클라이언트가 요청을 종료했습니다",
     "Close": "닫기",
     "Cms Maestro": "담당자",
     "Code": "코드",
     "Coefficient": "계수",
-    "Collapse": "무너지다",
-    "Collapse All": "모든 축소",
-    "Comment": "논평",
+    "Collapse": "축소하기",
+    "Collapse All": "모두 축소하기",
+    "Comment": "댓글",
     "Company": "회사",
     "Completed": "완료",
     "Completed At": "검수일시",
@@ -121,15 +121,15 @@
     "Confirm Password": "비밀번호 확인",
     "Confirmed": "확인일시",
     "Confirmed At": "확인일시",
-    "Conflict": "갈등",
-    "Connect": "연결하다",
-    "Connection Closed Without Response": "응답 없이 연결 종료",
-    "Connection Timed Out": "연결 시간이 초과되었습니다",
+    "Conflict": "충돌",
+    "Connect": "연결하기",
+    "Connection Closed Without Response": "응답 없이 연결이 종료됨",
+    "Connection Timed Out": "연결 시간이 초과됨",
     "Contact": "연락처",
     "Contact Cel": "담당자 휴대폰",
     "Contact Name": "담당자 이름",
     "Contact Tel": "담당자 전화",
-    "Continue": "계속하다",
+    "Continue": "계속",
     "Cost Count": "매입 상품 수량",
     "Cost Price": "매입가",
     "Cost Promotion Count": "매입 프로모션 상품 수량",
@@ -139,9 +139,9 @@
     "CouponOrderCount": "쿠폰 주문 수",
     "CouponUsedCount": "쿠폰 사용 수",
     "Create": "생성",
-    "Create :name": ":name개 생성",
+    "Create :name": ":name 생성하기",
     "Create At": "생성일",
-    "Created": "만들어진",
+    "Created": "생성됨",
     "Created At": "생성일",
     "Current Password": "현재 비밀번호",
     "Customer": "거래처",
@@ -152,7 +152,7 @@
     "Dashboards": "대시보드",
     "Dates": "...날짜",
     "Delete": "삭제",
-    "Delete :name": ":name 삭제",
+    "Delete :name": ":name 삭제하기",
     "Delete Account": "계정 삭제",
     "DelFl": "상품 삭제 여부",
     "Delivery Date": "배송일",
@@ -164,23 +164,23 @@
     "Detach": "분리",
     "Details": "상세",
     "Disable": "비활성화",
-    "Discard": "버리다",
+    "Discard": "버리기",
     "Discontinued": "단종됨",
     "Discontinued At": "상품단종날짜",
     "Discount": "할인",
     "Discount Amount": "할인금액",
     "Donation Title": "기부 제목",
     "Done": "완료",
-    "Down": "아래에",
+    "Down": "아래",
     "DownloadCouponDownloadedCount": "다운로드쿠폰 다운로드 횟수",
     "DownloadCouponUsedCount": "다운로드쿠폰 사용 횟수",
     "Downloaded": "다운로드여부",
     "Downloaded At": "다운로드일시",
     "Downloads": "다운로드",
-    "Duplicate": "복제하다",
-    "Duplicate :name": "중복: 이름",
+    "Duplicate": "복제하기",
+    "Duplicate :name": ":name 복제하기",
     "Edit": "수정",
-    "Edit :name": "편집 :name",
+    "Edit :name": ":name 편집하기",
     "Edit Inventory": "재고 수정",
     "Email": "이메일",
     "email": ":Attribute은(는) 유효한 이메일 주소여야 합니다.",
@@ -200,13 +200,13 @@
     "EsCategoryGood CateNm": "대표 카테고리 이름",
     "Excel Filepath": "엑셀 파일경로",
     "Excel Json": "엑셀 Json",
-    "Expand": "확장하다",
-    "Expand All": "모두 확장",
-    "Expectation Failed": "예상 실패",
+    "Expand": "확장하기",
+    "Expand All": "모두 확장하기",
+    "Expectation Failed": "기대 실패",
     "Explanation": "설명",
-    "Export": "내보내다",
-    "Export :name": "Export :name",
-    "Failed Dependency": "실패한 종속성",
+    "Export": "내보내기",
+    "Export :name": ":name 내보내기",
+    "Failed Dependency": "종속성 실패",
     "Failed to read excel file.": "엑셀 파일을 읽는데 실패했습니다.",
     "Featured Good List": "대표 상품(들)",
     "Featured Good Name List": "대표 상품(들)",
@@ -224,14 +224,14 @@
     "Forgot Your Password?": "비밀번호를 잊으셨나요?",
     "Forgot your password?": "비밀번호를 잊으셨나요?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "비밀번호를 잊으셨습니까? 이메일 주소를 입력하시면 새 비밀번호를 설정 할 수 있는 링크를 이메일로 보내드립니다.",
-    "Found": "설립하다",
+    "Found": "발견됨",
     "Gateway Timeout": "게이트웨이 시간 초과",
     "Generated Barcode": "생성 바코드",
     "Go Home": "홈으로 이동",
     "Go to page :page": ":Page 페이지로 이동",
     "Godo Code": "올라펫샵 상품코드",
     "Godo Name": "자사몰 상품명",
-    "Gone": "다 쓴",
+    "Gone": "사라짐",
     "Good": "일반상품",
     "Good Classification": "상품 분류",
     "Good Code": "상품코드",
@@ -254,13 +254,13 @@
     "Help Tip": "도움말",
     "Helpful Files": "도움파일",
     "Helpful Links": "도움되는 사이트",
-    "Hide": "숨다",
+    "Hide": "숨기기",
     "Hide :name": ":name 숨기기",
     "Holapet Category": "올라펫카테고리",
     "Holapet Category Name": "올라펫카테고리 이름",
-    "Home": "집",
+    "Home": "홈",
     "HTTP Version Not Supported": "지원되지 않는 HTTP 버전",
-    "I'm a teapot": "나는 찻주전자",
+    "I'm a teapot": "나는 찻주전자입니다",
     "Id": "아이디",
     "If it sets the minus value, the status is going to set RETURNED automatically.": "값이 마이너스로 설정되면 자동으로 반품상태로 설정됩니다.",
     "If you are in Korea, select \"Asia/Seoul\".": "한국에 거주하시는 경우 \"Asia/Seoul\"을 선택하세요.",
@@ -268,16 +268,16 @@
     "If you did not receive the email": "이메일을 받지 못하셨다면",
     "If you did not request a password reset, no further action is required.": "귀하께서 비밀번호 재설정을 요청하지 않으셨다면, 추가 조치가 필요하지 않습니다.",
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "\":actionText\" 버튼을 클릭하는 중에 문제가 있는 경우 아래 URL을 복사하여\n웹 브라우저에 붙여넣으세요:",
-    "IM Used": "메신저 사용",
-    "Image": "영상",
+    "IM Used": "이미 처리된 콘텐츠",
+    "Image": "이미지",
     "Impersonate": "사칭",
-    "Impersonation": "인격화",
-    "Import": "수입",
-    "Import :name": "수입 :name",
+    "Impersonation": "대행",
+    "Import": "가져오기",
+    "Import :name": ":name 가져오기",
     "Import Orders From Order Sheet Waybill Action": "주문서에서 주문 임포트",
     "Importing Goods": "상품 임포트하기",
-    "Insufficient Storage": "불충분한 저장 공간",
-    "Internal Server Error": "인터넷 서버 오류",
+    "Insufficient Storage": "저장 공간 부족",
+    "Internal Server Error": "서버 내부 오류",
     "Internet Lowest Price": "인터넷 최저가",
     "Introduction": "소개",
     "Invalid filename.": "파일 이름이 잘못되었습니다.",
@@ -347,23 +347,23 @@
     "Lately Shipping Created": "최근 출고 일시",
     "length": "길이",
     "Length Required": "필요한 길이",
-    "Like": "좋다",
+    "Like": "좋아요",
     "List": "목록",
     "List Image": "리스트 이미지",
     "Live Preset Download": "실시간 프리셋 다운로드",
-    "Load": "짐",
+    "Load": "불러오기",
     "Locale": "언어",
-    "Localize": "현지화",
+    "Localize": "현지화하기",
     "Location": "위치",
     "Locations": "위치",
-    "Locked": "잠김",
+    "Locked": "잠금됨",
     "Log In": "로그인",
     "Log in": "로그인",
     "Log Out": "로그아웃",
     "Login": "로그인",
     "LoginCnt": "로그인 횟수",
     "Logout": "로그아웃",
-    "Loop Detected": "루프 감지됨",
+    "Loop Detected": "루프가 감지됨",
     "Main": "메인",
     "Maintenance Mode": "유지 관리 모드",
     "Maker": "제조사",
@@ -378,11 +378,11 @@
     "MemNo": "회원 번호",
     "Memo": "메모",
     "Memo For Center": "센터 메모",
-    "Method Not Allowed": "비 허가 된 방식",
+    "Method Not Allowed": "허용되지 않는 메서드",
     "Min Order Count": "최소 주문 수량",
     "Min Order Price": "최소 발주 금액",
     "Min Price": "최소 판매가",
-    "Misdirected Request": "잘못된 요청",
+    "Misdirected Request": "잘못된 경로로 요청됨",
     "Mismatched Order Good Count": "미매칭 주문상품수",
     "Mismatched Order Goods": "미매칭 주문상품",
     "Mismatched Order Shipment": "미매칭 주문 출고",
@@ -391,9 +391,9 @@
     "ModDt": "수정일",
     "Model": "모델",
     "Modified": "수정일",
-    "Moved Permanently": "영구 이사",
+    "Moved Permanently": "영구 이동됨",
     "Multi-Status": "다중 상태",
-    "Multiple Choices": "객관식",
+    "Multiple Choices": "다중 선택",
     "My Profile": "프로필",
     "My Shop Sale Option Count": "자사몰 판매가능 옵션수",
     "Name": "이름",
@@ -413,7 +413,7 @@
     "Network Connect Timeout Error": "네트워크 연결 시간 초과 오류",
     "Network Read Timeout Error": "네트워크 읽기 시간 초과 오류",
     "New": "New",
-    "New :name": "새로운 :name",
+    "New :name": ":name 새로 만들기",
     "New Password": "새 비밀번호",
     "New Retail Purchase": "신규 판매",
     "Newsletter Received User Count": "뉴스레터 수신자수",
@@ -421,9 +421,9 @@
     "No": "아니요",
     "No Content": "콘텐츠 없음",
     "Non-Authoritative Information": "신뢰할 수 없는 정보",
-    "Not Acceptable": "받아 드릴 수없는",
+    "Not Acceptable": "허용되지 않음",
     "Not Exist Naver Productid": "네이버가격비교페이지ID 존재하지 않음",
-    "Not Extended": "연장되지 않음",
+    "Not Extended": "확장되지 않음",
     "Not Found": "찾을 수 없습니다",
     "Not Implemented": "구현되지 않음",
     "Not Modified": "수정되지 않음",
@@ -436,11 +436,11 @@
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "계정을 삭제하면 모든 리소스와 데이터가 영구적으로 삭제됩니다. 계정을 삭제하기 전에 유지하려는 필요한 데이터 또는 정보를 다운로드하세요.",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "계정이 삭제되면 모든 리소스와 데이터가 영구적으로 삭제됩니다. 계정을 영구적으로 삭제할 것인지 확인하기 위해 암호를 입력하십시오.",
     "Online Order & Shipping": "온라인 주문출고",
-    "Open": "열려 있는",
+    "Open": "열기",
     "Open in a current window": "현재 창에서 열기",
     "Open in a new window": "새 창에서 열기",
-    "Open in a parent frame": "상위 프레임에서 열기",
-    "Open in the topmost frame": "최상위 프레임에서 열기",
+    "Open in a parent frame": "부모 프레임에서 열기",
+    "Open in the topmost frame": "상위 프레임에서 열기",
     "Open on the website": "웹사이트에서 열기",
     "Option": "옵션",
     "Option Cost Price": "옵션매입가격",
@@ -520,7 +520,7 @@
     "Payment Method": "결제방법",
     "Payment Required": "결제 필요",
     "Pending": "대기",
-    "Permanent Redirect": "영구 리디렉션",
+    "Permanent Redirect": "영구 리다이렉트",
     "Phone": "전화",
     "Picking Zone": "피킹존",
     "Picking Zone Number": "피킹존 번호",
@@ -548,7 +548,7 @@
     "Printed": "출력여부",
     "Printed At": "출력일시",
     "Printed Count": "출력된 수",
-    "Processing": "처리",
+    "Processing": "처리 중",
     "Profile": "프로필",
     "Profile Information": "프로필 정보",
     "Promotion Codable": "프로모션 코드 종류",
@@ -579,7 +579,7 @@
     "Rack": "랙",
     "Racks": "랙",
     "Railgun Error": "레일건 오류",
-    "Range Not Satisfiable": "범위가 만족스럽지 않음",
+    "Range Not Satisfiable": "범위가 만족되지 않음",
     "Reason": "사유",
     "Receipt Number": "영수증 번호",
     "Receiver Cell Phone": "수령인 휴대폰",
@@ -589,7 +589,7 @@
     "Receiving": "입고",
     "Recipient": "수령자",
     "Recipient Information": "수령자정보",
-    "Record": "기록",
+    "Record": "기록하기",
     "Refunded": "환불",
     "Regards,": "안부,",
     "RegDt": "등록일시",
@@ -602,7 +602,7 @@
     "Remember me": "로그인 상태 유지",
     "Request File Url": "요청파일",
     "Request Header Fields Too Large": "요청 헤더 필드가 너무 큼",
-    "Request Timeout": "요청 시간 초과",
+    "Request Timeout": "요청 처리 시간 초과",
     "Requester": "요청자",
     "Resend Verification Email": "확인 메일 다시 보내기",
     "Reset Content": "콘텐츠 재설정",
@@ -610,7 +610,7 @@
     "Reset Password Notification": "비밀번호 재설정 알림",
     "Respond File Url": "결과파일",
     "Restore": "복원",
-    "Restore :name": ":name을 복원",
+    "Restore :name": ":name 복원하기",
     "results": "결과",
     "Retail Code": "리테일 코드",
     "Retail Purchase": "판매",
@@ -630,18 +630,18 @@
     "SaleAmt": "총 주문 금액",
     "Save": "저장",
     "Save & Close": "저장 후 닫기",
-    "Save & Return": "저장 및 돌아가기",
-    "Save :name": ":name 저장",
+    "Save & Return": "저장 후 돌아가기",
+    "Save :name": ":name 저장하기",
     "Saved.": "저장됨.",
     "Search": "검색",
-    "Search :name": "검색 :name",
-    "See Other": "기타 보기",
+    "Search :name": ":name 검색하기",
+    "See Other": "다른 위치 보기",
     "Select": "선택",
-    "Select All": "모두 선택",
+    "Select All": "모두 선택하기",
     "Sell Goods Per Center Class": "센터등급별 판매상품수",
     "Sell Goods Per Safe Class": "재고등급별 판매상품수",
     "Seller Good Code": "판매자상품코드",
-    "Send": "보내다",
+    "Send": "보내기",
     "Send Password Reset Link": "비밀번호 재설정 링크 보내기",
     "Sending": "발송",
     "Sent": "발송일시",
@@ -666,9 +666,9 @@
     "Shipping Unit Price": "출고 단가",
     "Shorten Code": "축약 코드",
     "Shortening Goods Code": "축약 상품코드",
-    "Show": "보여주다",
-    "Show :name": "쇼 :name",
-    "Show All": "모두 보이기",
+    "Show": "보기",
+    "Show :name": ":name 보기",
+    "Show All": "모두 보기",
     "Showing": "보기",
     "Shutdown Goods": "상품 셧다운",
     "Sign In": "로그인",
@@ -683,11 +683,11 @@
     "Sms Received User Count": "SMS 수신자수",
     "SmsFl": "SMS플래그",
     "SoldOutFl": "품절 여부",
-    "Solve": "해결하다",
+    "Solve": "해결하기",
     "Sort Order": "정렬순서",
     "Spec": "스펙",
     "SSL Handshake Failed": "SSL 핸드셰이크 실패",
-    "Start": "시작",
+    "Start": "시작하기",
     "Start Date": "시작 시각",
     "Start Price": "시작 가격",
     "Started": "시작일",
@@ -695,9 +695,9 @@
     "Status": "상태",
     "Status Date": "상태일",
     "StockFl": "판매 재고 여부",
-    "Stop": "멈추다",
+    "Stop": "중지하기",
     "Storage Box Zone": "스토리지 박스존",
-    "Submit": "제출하다",
+    "Submit": "제출하기",
     "Subscribe": "구독",
     "Subtotal": "소계",
     "Suggested Monitoring Price": "공모가",
@@ -735,13 +735,13 @@
     "SupplierGood Inventory": "공급사 재고 수량",
     "SupplierGood Supplier Attribute": "공급사 상품 속성",
     "Suppliers": "공급사",
-    "Switch": "스위치",
-    "Switch To Role": "역할로 전환",
-    "Switching Protocols": "스위칭 프로토콜",
-    "Tag": "꼬리표",
+    "Switch": "전환하기",
+    "Switch To Role": "역할 전환",
+    "Switching Protocols": "프로토콜 전환",
+    "Tag": "태그",
     "Tags": "태그",
     "Tax": "세금",
-    "Temporary Redirect": "임시 리디렉션",
+    "Temporary Redirect": "임시 리다이렉트",
     "Terminate On Pricing Violation": "가격 위반 시 공급 종료 여부",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "가입해 주셔서 감사합니다! 시작하시기 전에 방금 이메일로 보낸 링크를 클릭하여 이메일 주소를 확인해 주시겠습니까? 이메일을 받지 못한 경우 새 이메일을 보내 드리겠습니다.",
     "The :attribute must be at least :length characters and contain at least one number.": ":Attribute은(는) 반드시 적어도 :length글자 이상이면서 하나 이상의 숫자를 포함해야 합니다.",
@@ -772,7 +772,7 @@
     "Title": "제목",
     "to": "에",
     "Toggle navigation": "내비게이션 전환",
-    "Too Early": "너무 이른",
+    "Too Early": "너무 이른 요청",
     "Too Many Requests": "너무 많은 요청",
     "Tools": "도구",
     "Total Amount": "전체수량",
@@ -798,7 +798,7 @@
     "TotalPrice": "판매가",
     "TotalStock": "통합 재고량",
     "Tracking": "이력",
-    "Translate": "번역하다",
+    "Translate": "번역하기",
     "Translate It": "번역하세요",
     "Treat as :status": ":status로 처리",
     "Type": "타입",
@@ -807,14 +807,14 @@
     "Unit Price": "단가",
     "Unit Purchase Price": "개당 구매가격",
     "Units Per Case": "입수량",
-    "Unknown Error": "알수없는 오류",
-    "Unpack": "짐 등에서 꺼내다",
-    "Unprocessable Entity": "처리할 수 없는 항목",
+    "Unknown Error": "알 수 없는 오류",
+    "Unpack": "압축 풀기",
+    "Unprocessable Entity": "처리할 수 없는 엔티티",
     "Unsubscribe": "구독 취소",
     "Unsupported Media Type": "지원되지 않는 미디어 유형",
-    "Up": "위로",
+    "Up": "위",
     "Update": "업데이트",
-    "Update :name": "업데이트 :name",
+    "Update :name": ":name 업데이트하기",
     "Update Password": "비밀번호 업데이트",
     "Update your account's profile information and email address.": "계정의 프로필 정보와 이메일 주소를 업데이트하세요.",
     "Updated At": "업데이트일",
@@ -822,17 +822,17 @@
     "Upload an Excel file (xlsx, xls, csv)": "엑셀 파일을 업로드합니다. (xlsx, xls, csv)",
     "Upload File Again": "다시등록하기",
     "Upload Waybill file (pdf)": "운송장 파일을 업로드합니다. (pdf)",
-    "URI Too Long": "URI가 너무 깁니다.",
+    "URI Too Long": "URI가 너무 깁니다",
     "Use Proxy": "프록시 사용",
     "User": "사용자",
     "Username": "로그인아이디",
     "Users": "사용자",
     "Validator": "검수인",
-    "Variant Also Negotiates": "변형도 협상",
+    "Variant Also Negotiates": "변형 협상 중",
     "Verify Email Address": "이메일 주소 확인",
     "Verify Your Email Address": "이메일 주소 확인",
     "View": "보기",
-    "View :name": "보기 :name",
+    "View :name": ":name 보기",
     "Visit": "방문하기",
     "Warehouse": "물류창고",
     "Warehouse Manager": "입고담당자",
@@ -855,7 +855,7 @@
     "Wearing Price": "입고 금액",
     "Wearing Quantity": "입고 수량",
     "Wearing Unit Price": "입고 단가",
-    "Web Server is Down": "웹 서버가 다운되었습니다",
+    "Web Server is Down": "웹 서버가 다운됨",
     "Wemake Categories": "위메프 카테고리",
     "Whoops!": "저런!",
     "Won": "원",
