--- a/lang/ko.json
+++ b/lang/ko.json
@@ -145,6 +145,7 @@
     "Created At": "생성일",
     "Current Password": "현재 비밀번호",
     "Customer": "거래처",
+    "Customer Information": "거래처 정보",
     "Customer Price": "소비자가",
     "Customers": "거래처",
     "Daily Registered User Count": "신규회원수",
@@ -545,6 +546,7 @@
     "Print Order": "주문 출력",
     "Print Order Sheet Waybill": "주문서 출력",
     "Print Orders": "주문 출력",
+    "Print Retail Purchase": "판매 출력하기",
     "Printed": "출력여부",
     "Printed At": "출력일시",
     "Printed Count": "출력된 수",
@@ -614,10 +616,13 @@
     "results": "결과",
     "Retail Code": "리테일 코드",
     "Retail Purchase": "판매",
+    "Retail Purchase Code": "거래코드",
+    "Retail Purchase Information": "판매 정보",
     "Retail Purchase Item": "판매아이템",
     "Retail Purchase Items": "판매아이템",
     "Retail Purchase Per Day": "일별매출",
     "Retail Purchase Sum Payment Method": "결제방법별 매출합계",
+    "Retail Purchased At": "판매시간",
     "Retail Purchases": "판매",
     "Retry With": "재시도",
     "Returning": "반품하기",
@@ -652,6 +657,8 @@
     "Session Has Expired": "세션이 만료됨",
     "Set Good": "세트상품",
     "Set Goods": "세트상품",
+    "Set To Be Active": "운영중으로 변경",
+    "Set To Be Not Active": "운영종료로 변경",
     "Setting": "설정",
     "Settings": "설정",
     "Ship Quantity": "배송 수량(주문 단위)",
@@ -771,6 +778,7 @@
     "Timezone": "타임존",
     "Title": "제목",
     "to": "에",
+    "Toggle Is Active": "운영중 속성 변경",
     "Toggle navigation": "내비게이션 전환",
     "Too Early": "너무 이른 요청",
     "Too Many Requests": "너무 많은 요청",
@@ -798,6 +806,7 @@
     "TotalPrice": "판매가",
     "TotalStock": "통합 재고량",
     "Tracking": "이력",
+    "Transaction Statement": "거래명세서",
     "Translate": "번역하기",
     "Translate It": "번역하세요",
     "Treat as :status": ":status로 처리",
