Add primary key into location and warehouse with integer

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -240,6 +240,7 @@
     "Good Per Day": "일별 일반상품",
     "Good Sum Cost Price": "상품 총매입가",
     "Goods": "일반상품",
+    "Goods Cd": "상품코드",
     "Goods Code": "상품코드",
     "Goods Name": "상품명",
     "Goods Nm": "상품명",
@@ -591,6 +592,7 @@
     "Receiving": "입고",
     "Recipient": "수령자",
     "Recipient Information": "수령자정보",
+    "Recipients": "수신자",
     "Record": "기록하기",
     "Refunded": "환불",
     "Regards,": "안부,",
